2007-01-22 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 356: reverse the order of entries in the ChangeLog and reformat
		   some (mine-)fields. Changed most email addresses to URLs to
		   avoid spam. Changed the format of the dates too.

2007-01-20 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 355: release 2.0.0-rc5

2007-01-20 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 354: Added Parallel Input/Output (PIO) functions. Prepared some
	  	   support functions for SIO and strobe control. Misc cleanups.
	* SVN 353: Remove the check of err_flag_2 for now: it seems not to work
	  	   proprely. (Thanks to Damien Delannay)
	* SVN 352: fix coherency of the format_7 mode used in
	  	   grab_partial_image.c (Thanks to Damien Delannay)
	* SVN 351: remove save_channel and load_channel from the dc1394camera_t
	  	   structure. Also remove the functions
		   dc1394_memory_get_save/load_ch() from the API.

2007-01-18 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 350: fixed missing dc1394_capture_enqueue() in
	  	   grab_partial_image.c (Thanks to Damien Delannay)
	* SVN 349: update the error message in case we hit the the vmalloc limit.
	  	   (Thanks to Peter Antoniac)

2007-01-09 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 348: print a smart error message when vmalloc fails due to
	  	   VMALLOC_RESERVED that is too low. Ideally, this limit should
	  	   be probed dynamically as it can change from machine to
		   machine.

2006-12-24 David Moore http://sourceforge.net/users/dmoore/
	* SVN 347: Make dc1394_video_set_iso_channel() a public function.
	* SVN 346: Added new function dc1394_reset_bus() and a command-line
	  	   utility called dc1394_reset_bus that will..... reset the bus.
	* SVN 345: Added support for 800 Mb speeds to Mac OS X (Thanks Mark 
	  	   Munte)
	* SVN 344: Updated Mac OS X support to allow the select() call by using
	  	   dc1394_capture_get_fileno ().  It does this by using a